bynkc/tests/fixtures/positive/251_multi_file_commons_test/src/thing/make.bynk
commons thing {
  fn Widget.fromInt(n: Int) -> Result[Widget, ValidationError] {
    Widget.of(n)
  }
}
