bynkc/tests/fixtures/negative/323_match_nested_non_exhaustive/input.bynk
commons test {
  type E = enum { A, B }

  fn f(res: Result[Int, E]) -> Int {
    match res {
      Ok(n)  => n
      Err(A) => 0
    }
  }
}
